# lyricaligner

./: .gitignore  Makefile  README.md  benchmark_aligner.sh  pyproject.toml  run_aligner_transformers_reference.sh
lyricaligner/: __init__.py  alignment.py  asr_transcriber.py  cli.py  config.py  formatters.py  lyrics_processor.py  lyricsaligner.py  timing_utils.py  types.py  utils.py
tests/: test_alignment.py  test_formatter.py
